* Remove `new` operator from Function constructor calls and minify code strings used in compiled methods. [jddalton]

* Simplify extending fuse.dom.NodeList and fuse.dom.RawList and conform more to the jQuery syntax for list getters/setters. [jddalton]

* Force fuse.Object._each() to skip the `prototype` property on functions because browsers are not consistent one way or the other. [jddalton]

* Use the global.opera [[Class]] value for better Opera agent detection. [jddalton, Paul Irish]

* Ensure private function toInteger() works with extremely large negative values. [Asen Bozhilov, jddalton]

* Remove unused functionality from fuse.addNS(). [jddalton]

* Update the fuse.Class API. [jddalton, T.J. Crowder]
  - Created fuse.Class.statics and fuse.Class.mixins objects
  - Moved the callSuper() method onto the Class.mixins object
  - Added addMixins(), addPlugins(), addStatics() methods to fuse.Class.statics object
  - fuse.Class argument order is now ($super, plugins, mixins, statics) or (plugins, mixins, statics)
  - Class extend() argument order is now (plugins, mixins, statics)
  - Call a super method one of the following:
    this.callSuper(arguments); // OR
    this.callSuper(method, arg1, arg2, ...); // OR
    method.$super.call(this, arg1, arg2, ...); // OR
    arguments.callee.$super.call(this, arg1, arg2, ...);

* Simplify private function toInteger(). [Asen Bozhilov, jddalton]

* Give private function addArrayMethods() a default value of emptyFunction() so that the Array extensions aren't needed for other modules to call it. [jddalton]

* Ensure new fuse.Object() is instanceof fuse.Object. [jddalton]

* Add `instance` argument to fuse.Fusebox() allowing a custom object to be used as the base which sandboxed natives are attached to. [jddalton]

* Ensure fuse.Object.toQueryString() works correctly when objects contain undefined values in IE. [jddalton]
