@@ -1,42 +1,57 @@
   /*--------------------------- SELECTOR: NWMATCHER --------------------------*/
 
-  (function(Selector, Node, NodeList, RawList) {
-    Selector.match = function match(element, selector, context) {
-      function match(element, selector, context) {
-        return __match(element.raw || element, String(selector || ''), context);
+  (function(object, Node, NodeList, RawList) {
+    function match(element, selectors, context) {
+      function match(element, selectors, context) {
+        return __match(
+          element.raw || fuse.get(element).raw,
+          String(selectors || ''),
+          context && fuse.get(context).raw || fuse._doc);
       }
 
       __match = NW.Dom.match;
-      return (Selector.match = match)(element, selector, context);
-    };
+      return (object.match = match)(element, selectors, context);
+    }
 
-    Selector.rawSelect = function rawSelect(selector, context, callback) {
-      function rawSelect(selector, context, callback) {
+    function rawSelect(selectors, context, callback) {
+      function rawSelect(selectors, context, callback) {
         var i = -1, results = RawList();
-        __select(String(selector || ''), context, function(node) {
-          results[++i] = node;
-          callback && callback(node);
-        });
+        __select(
+          String(selectors || ''),
+          context && fuse.get(context).raw || fuse._doc,
+          function(node) {
+            results[++i] = node;
+            callback && callback(node);
+          });
+
         return results;
       }
 
       __select = NW.Dom.select;
-      return (Selector.rawSelect = rawSelect)(selector, context, callback);
-    };
+      return (object.rawSelect = rawSelect)(selectors, context, callback);
+    }
 
-    Selector.select = function select(selector, context, callback) {
-      function select(selector, context, callback) {
+    function select(selectors, context, callback) {
+      function select(selectors, context, callback) {
         var i = -1, results = NodeList();
-        __select(String(selector || ''), context, function(node) {
-          node = results[++i] = Node(node);
-          callback && callback(node);
-        });
+        __select(
+          String(selectors || ''),
+          context && fuse.get(context).raw || fuse._doc,
+          function(node) {
+            node = results[++i] = Node(node);
+            callback && callback(node);
+          });
+
         return results;
       }
 
       __select = NW.Dom.select;
-      return (Selector.select = select)(selector, context, callback);
-    };
+      return (object.select = select)(selectors, context, callback);
+    }
 
-    var __match, __select, match = nil, select = nil;
-  })(fuse.dom.Selector, fuse.dom.Node, fuse.dom.NodeList, fuse.dom.RawList);
+    var __match, __select;
+    object.match = match;
+    object.rawSelect = rawSelect;
+    object.select = select;
+
+  })(fuse.dom.selector, fuse.dom.Node, fuse.dom.NodeList, fuse.dom.RawList);
