@@ -71,7 +71,10 @@
       fuse.debug = debugParam;
 
       // load selector engine and Fuse engine adapter
-      loadScriptFile('../../../vendor/' + engineItem.value);
+      fuse.String(engineItem.value).split('+').each(function(path) {
+        loadScriptFile('../../../vendor/' + path);
+      });
+
       loadScriptFile('../../../src/dom/selector/' + engineItem.text.toLowerCase() + '.js');
 
       // attach event handlers to config controls
@@ -102,7 +105,7 @@
   <option value="nwbox/nwmatcher/src/nwmatcher.js">NWMatcher</option>
   <option value="peppy/peppy.js">Peppy</option>
   <option value="sizzle/sizzle.js">Sizzle</option>
-  <option value="slick/slick.js">Slick</option>
+  <option value="slick/Slick.Parser.js+slick/Slick.Finder.js">Slick</option>
   <option value="sly/Sly.js">Sly</option>
 </select>
 </span>
